[gd_scene load_steps=11 format=2]

[ext_resource path="res://TextureRect.gd" type="Script" id=1]
[ext_resource path="res://progress.png" type="Texture" id=2]
[ext_resource path="res://under.png" type="Texture" id=3]
[ext_resource path="res://noun_hawk_1183886.svg" type="Texture" id=4]
[ext_resource path="res://noun_Dove_1344081.svg" type="Texture" id=5]
[ext_resource path="res://Node2D.gd" type="Script" id=6]
[ext_resource path="res://red.png" type="Texture" id=7]
[ext_resource path="res://green.png" type="Texture" id=8]
[ext_resource path="res://matrixColor.png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 80, 80 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = 100.0
margin_top = 550.0
margin_right = 200.0
margin_bottom = 565.0
rect_scale = Vector2( 2, 2 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBar2" type="TextureProgress" parent="."]
margin_left = 550.0
margin_top = 100.0
margin_right = 650.0
margin_bottom = 115.0
rect_scale = Vector2( 2, 2 )
value = 10.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBar3" type="TextureProgress" parent="."]
margin_left = 300.0
margin_top = 100.0
margin_right = 400.0
margin_bottom = 115.0
rect_scale = Vector2( 2, 2 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthText" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 510.0
margin_right = 300.0
margin_bottom = 530.0
rect_scale = Vector2( 2, 2 )
text = "Player Health (max 100)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthText2" type="RichTextLabel" parent="."]
margin_left = 550.0
margin_top = 10.0
margin_right = 650.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "Cost of both fighting/going hungry (/15)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthText3" type="RichTextLabel" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 0, 1, 0.0627451, 1 )
text = "Available food (/15)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="foodText" type="RichTextLabel" parent="."]
margin_left = 550.0
margin_top = 510.0
margin_right = 750.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )
text = "You have food for 0 days"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="surviveText" type="RichTextLabel" parent="."]
margin_left = 550.0
margin_top = 550.0
margin_right = 750.0
margin_bottom = 570.0
rect_scale = Vector2( 2, 2 )
text = "You survived for 0 days"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instr" type="RichTextLabel" parent="."]
visible = false
margin_left = 300.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 225.0
rect_scale = Vector2( 2, 2 )
text = "Choose your behavior for tomorrow's food search by clicking the Hawk or the Dove.

Being Hawkish gets you 2 days worth of food if the opponent is Dovish, but only 1 day worth of food and -10 health if the opponent is also Hawkish

Being Dovish gets you 1 day worth of food, only if the opponent is Dovish

-10 health if you go hungry for a day, +1 health, -1 food for surviving the day"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choiceHawk" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 110.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
flip_h = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="youHawk" type="TextureRect" parent="."]
visible = false
margin_left = 300.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 110.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="oppHawk" type="TextureRect" parent="."]
visible = false
margin_left = 300.0
margin_top = 250.0
margin_right = 400.0
margin_bottom = 350.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choiceDove" type="TextureRect" parent="."]
margin_left = 820.0
margin_top = 10.0
margin_right = 920.0
margin_bottom = 110.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="youDove" type="TextureRect" parent="."]
visible = false
margin_left = 300.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 110.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="oppDove" type="TextureRect" parent="."]
visible = false
margin_left = 300.0
margin_top = 250.0
margin_right = 400.0
margin_bottom = 350.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 900.0
margin_top = 300.0
margin_right = 931.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="youWere" type="RichTextLabel" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
text = "You Were:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="oppWas" type="RichTextLabel" parent="."]
visible = false
margin_left = 10.0
margin_top = 250.0
margin_right = 110.0
margin_bottom = 290.0
rect_scale = Vector2( 2, 2 )
text = "Opponent Was:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="died" type="RichTextLabel" parent="."]
visible = false
margin_left = 350.0
margin_top = 50.0
margin_right = 390.0
margin_bottom = 90.0
rect_scale = Vector2( 10, 10 )
text = "You
Died"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = 90.0
margin_top = 200.0
margin_right = 210.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
custom_styles/bg = SubResource( 1 )
same_column_width = true
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList2" type="ItemList" parent="."]
margin_left = 340.0
margin_top = 200.0
margin_right = 490.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
custom_styles/bg = SubResource( 1 )
max_columns = 2
same_column_width = true
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList3" type="ItemList" parent="."]
margin_left = 650.0
margin_top = 200.0
margin_right = 800.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
custom_styles/bg = SubResource( 1 )
max_columns = 2
same_column_width = true
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 400.0
margin_top = 450.0
margin_right = 600.0
margin_bottom = 470.0
rect_scale = Vector2( 2, 2 )
text = "Total Payoff: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 16.0
margin_top = 454.0
margin_right = 64.0
margin_bottom = 474.0
rect_scale = Vector2( 2, 2 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="choiceHawk" to="." method="_on_choiceHawk_gui_input"]
[connection signal="gui_input" from="choiceDove" to="." method="_on_choiceDove_gui_input"]
[connection signal="gui_input" from="Button" to="." method="_on_Button_gui_input"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
